[workspace]

members = [
  "eva",
  "svc/svc-template",
  "svc/dapp",
  "svc/db-influx",
  "svc/db-sql",
  "svc/db-timescale",
  "svc/aaa-acl",
  "svc/aaa-otp",
  "svc/aaa-localauth",
  "svc/svc-expiration",
  "svc/filemgr",
  "svc/svc-filewriter",
  "svc/controller-enip",
  "svc/controller-modbus",
  "svc/controller-ads",
  "svc/controller-opcua",
  "svc/controller-pubsub",
  "svc/bridge-ads",
  "svc/controller-w1",
  "svc/controller-trap",
  "svc/controller-dobj",
  "svc/controller-sr",
  "svc/controller-virtual",
  "svc/controller-lm",
  "svc/svc-modbus-slave",
  "svc/hmi",
  "svc/mirror",
  "svc/repl",
  "svc/generator",
  "svc/svc-locker",
  "svc/svc-mailer",
  "tools/eva-cloud-manager",
  "tools/gen-intl",
  "dobj-codegen",
  "psrpc",
  "genpass-native",
  "crypto-tools",
  "benchmarks/bm-primary"
, "crypto-tools", "dobj-codegen"]

resolver = "1"

exclude = [
  "contrib/webinfo",
  "eva_pg",
  "svc/ffi",
  "svc/controller-system",
  "svc/svc-example-temp",
  "svc/svc-example-sensor-set",
  "tools/eva-lsl",
]

[workspace.package]
version = "4.0.2"
edition = "2021"
repository = "https://github.com/eva-ics/eva4"

[workspace.dependencies]
openssl = "^0.10.63"
once_cell = "^1.19.0"
hyper = "^0.14.28"
parking_lot = "^0.12.1"
async-channel = "^1.7"
async-recursion = "^1.0.5"
serde_yaml = "^0.8"
eva-common = "^0.3.77"
cargo_metadata = "^0.18.1"
itertools = "^0.12.1"
hex = "^0.4.3"
clap = "^3.2.22"
genpass-native = { version = "*", path = "genpass-native" }
psrpc = { version = "*", path = "psrpc" }
async-trait = "^0.1.77"
log = "^0.4.20"
tokio = "^1.36.0"
colored = "^2.1.0"
bmart = "^0.2.8"
uuid = "^1.7.0"
futures = "^0.3.30"
serde = "^1.0.196"
base64 = "^0.13"
lazy_static = "^1.4.0"
paho-mqtt = "^0.12.3"
psrt = "^0.2"
serde_json = "^1.0.113"
sqlx = "^0.6.3"
jemallocator = "^0.5.4"
triggered = "^0.1.2"
eva-sdk = "^0.3.56"
busrt = "^0.4"
chrono = "^0.4.33"
simple-pool = "^0.0.18"

[profile.release]
strip = true
lto = true
codegen-units = 1
