[workspace]

members = [
  "eva",
  "svc/svc-template",
  "svc/dapp",
  "svc/db-influx",
  "svc/db-sql",
  "svc/db-timescale",
  "svc/aaa-acl",
  "svc/aaa-otp",
  "svc/aaa-localauth",
  "svc/svc-expiration",
  "svc/filemgr",
  "svc/svc-filewriter",
  "svc/controller-enip",
  "svc/controller-modbus",
  "svc/controller-ads",
  "svc/controller-opcua",
  "svc/controller-pubsub",
  "svc/bridge-ads",
  "svc/controller-w1",
  "svc/controller-trap",
  "svc/controller-dobj",
  "svc/controller-sr",
  "svc/controller-virtual",
  "svc/controller-lm",
  "svc/svc-modbus-slave",
  "svc/hmi",
  "svc/mirror",
  "svc/repl",
  "svc/repl-uni",
  "svc/generator",
  "svc/svc-locker",
  "svc/svc-mailer",
  "tools/eva-cloud-manager",
  "tools/gen-intl",
  "dobj-codegen",
  "logreducer",
  "psrpc",
  "genpass-native",
  "tracing-async-mutex",
  "crypto-tools",
  "benchmarks/bm-primary",
  "crypto-tools",
  "dobj-codegen"]

resolver = "1"

exclude = [
  "contrib/webinfo",
  "eva_pg",
  "svc/ffi",
  "svc/videosink",
  "svc/controller-system",
  "svc/svc-example-temp",
  "svc/svc-example-sensor-set",
  "tools/eva-lsl",
  "eva-gst",
]

[workspace.package]
version = "4.1.0"
edition = "2021"
repository = "https://github.com/eva-ics/eva4"

[workspace.dependencies]
openssl = "^0.10.72"
once_cell = "^1.19.0"
hyper = "^0.14.28"
parking_lot = { package = "parking_lot_rt", version = "^0.12.1" }
async-channel = "^1.7"
async-recursion = "^1.0.5"
serde_yaml = "^0.8"
eva-common = { version = "^0.3.107", features = ["fips"] }
cargo_metadata = "^0.18.1"
itertools = "^0.12.1"
hex = "^0.4.3"
clap = "^3.2.22"
genpass-native = { version = "*", path = "genpass-native" }
psrpc = { version = "*", path = "psrpc" }
async-trait = "^0.1.77"
log = "^0.4.20"
tokio = "^1.38.2"
colored = "^2.1.0"
bmart = "^0.2.11"
uuid = "^1.7.0"
futures = "^0.3.30"
serde = "^1.0.197"
ttl_cache = "0.5"
base64 = "^0.13"
lazy_static = "^1.4.0"
paho-mqtt = "^0.12.3"
psrt = "^0.2.8"
serde_json = "^1.0.113"
sqlx = "^0.6.3"
mimalloc = "^0.1.46"
triggered = "^0.1.2"
eva-sdk = "^0.3.64"
busrt = { version = "^0.4.13", features = ["rt"] }
chrono = "^0.4.33"
simple-pool = "^0.0.18"

[profile.release]
strip = true
lto = true
codegen-units = 1
