[workspace]

members = [
  "eva",
  "svc/svc-template",
  "svc/dapp",
  "svc/db-influx",
  "svc/db-sql",
  "svc/db-json",
  "svc/db-timescale",
  "svc/aaa-acl",
  "svc/aaa-otp",
  "svc/aaa-localauth",
  "svc/svc-expiration",
  "svc/filemgr",
  "svc/ffi",
  "svc/gst-pipeline",
  "svc/svc-filewriter",
  "svc/controller-enip",
  "svc/controller-modbus",
  "svc/controller-ads",
  "svc/controller-opcua",
  "svc/controller-pubsub",
  "svc/controller-netmon",
  "svc/controller-system",
  "svc/bridge-ads",
  "svc/controller-w1",
  "svc/controller-trap",
  "svc/controller-dobj",
  "svc/controller-sr",
  "svc/controller-virtual",
  "svc/controller-lm",
  "svc/svc-modbus-slave",
  "svc/hmi",
  "svc/mirror",
  "svc/repl",
  "svc/repl-uni",
  "svc/generator",
  "svc/svc-locker",
  "svc/svc-mailer",
  "svc/videosink",
  "tools/eva-cloud-manager",
  "tools/gen-intl",
  "eva-gst",
  "dobj-codegen",
  "logreducer",
  "psrpc",
  "eva-internal",
  "genpass-native",
  "tracing-async-mutex",
  "crypto-tools",
  "benchmarks/bm-primary",
  "crypto-tools",
  "dobj-codegen", "eva-internal"]

resolver = "1"

exclude = [
  "contrib/webinfo",
  "eva_pg",
  "svc/svc-example-temp",
  "svc/svc-example-sensor-set",
  "tools/eva-lsl",
]

[workspace.package]
version = "4.2.0"
edition = "2024"
repository = "https://github.com/eva-ics/eva4"

[workspace.dependencies]
aws-lc-rs = "1.14.1"
bma-ts = "0.2.4"
binrw = "0.13.3"
oneshot = "0.1.13"
bytes = "1.11.1"
openssl = "^0.10.75"
ipnetwork = "0.20.0"
hyper = "^0.14.28"
parking_lot = { package = "parking_lot_rt", version = "^0.12.1" }
async-channel = "^1.7"
async-recursion = "^1.0.5"
serde_yaml = "^0.8"
eva-common = { version = "^0.4.7" }
cargo_metadata = "^0.18.1"
itertools = "^0.12.1"
hex = "^0.4.3"
clap = "4.5"
genpass-native = { version = "*", path = "genpass-native" }
hostname = "0.3.1"
psrpc = { version = "*", path = "psrpc" }
rtsc = "^0.4.4"
async-trait = "^0.1.77"
log = "^0.4.20"
libc = "0.2.159"
tokio = "1.49"
colored = "^2.1.0"
bmart = "^0.2.11"
num_cpus = "1.17.0"
uuid = "^1.7.0"
futures = "^0.3.30"
tracing = { version = "0.1", features = ["log"] }
regex = "1.10.3"
serde = "^1.0.197"
ttl_cache = "0.5"
base64 = "^0.13"
paho-mqtt = "^0.13.3"
psrt = "^0.2.8"
serde_json = "^1.0.113"
sqlx = { version = "0.8", default-features = false, features = ["any", "json", "derive"] }
submap = "0.3.6"
syslog = "6.1.0"
sysinfo = "0.37.2"
mimalloc = "^0.1.46"
triggered = "^0.1.2"
eva-sdk = "^0.4.3"
busrt = { version = "^0.5.4", features = ["rt"] }
chrono = "^0.4.33"
simple-pool = "^0.0.18"

[profile.release]
strip = true
lto = true
codegen-units = 1
