[package]
name = "eva-gst"
version = "0.1.2"
edition = "2021"
description = "EVA-ICS GStreamer plugins"
repository = "https://github.com/eva-ics/eva4"
publish = false

[lib]
name = "gsteva"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
atomic-timer = "0.2.2"
binrw = "0.15.0"
busrt = { version = "0.4.21", features = ["ipc-sync", "rpc-sync", "cursors"] }
dateparser = "0.2.1"
eva-common = { version = "0.3.114", features = ["payload", "events", "multimedia"] }
gst = { version = "0.22", package = "gstreamer" }
gst-base = { version = "0.22", package = "gstreamer-base" }
gst-video = { version = "0.22", package = "gstreamer-video" }
hostname = "0.4.1"
parking_lot = { version = "0.12.1", package = "parking_lot_rt" }
rtsc = "0.3.15"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
gst-plugin-version-helper = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
