[package]
name = "eva-gst"
version = "0.2.0"
edition = "2024"
description = "EVA-ICS GStreamer plugins"
repository = "https://github.com/eva-ics/eva4"
publish = false

[lib]
name = "gsteva"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
atomic-timer = "0.2.2"
binrw = "0.15.0"
busrt = { workspace = true, features = ["ipc-sync", "rpc-sync", "cursors"] }
dateparser = "0.2.1"
eva-common = { workspace = true, features = ["payload", "events", "multimedia"] }
gst = { version = "0.24", package = "gstreamer" }
gst-base = { version = "0.24", package = "gstreamer-base" }
gst-video = { version = "0.24", package = "gstreamer-video" }
hostname = { workspace = true }
parking_lot = { workspace = true }
rtsc = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
gst-plugin-version-helper = "0.8"
