[package]
name = "eva-internal"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aws-lc-rs = { workspace = true }
eva-common = { workspace = true, features = ["time", "extended-value"] }
rtc-interval = "0.1.0"
tokio = { workspace = true, features = ["time", "rt"] }

