[package]
name = "eva-ics"
version = "4.0.1"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "EVA ICS v4"
readme = "README.md"
keywords = ["eva-ics", "iot", "industrial", "scada", "cloud"]

[lib]
name = "eva"
path = "src/lib.rs"

[[bin]]
name = "eva-node"
path = "src/main.rs"

[[bin]]
name = "init-registry"
path = "src/init_registry.rs"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
yedb = { version = "0.4.12", features = ["server-embed", "busrt-rpc"] }
clap = { version = "3.0.7", features = ["derive"] }
busrt = { version = "0.4.5", features = ["full"] }
serde_yaml = "0.8.26"
serde_json = "1.0.96"
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive", "rc"] }
glob = "0.3.0"
hostname = "0.3.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
eva-common = { version = "0.2.10", features = ["full"] }
bmart = { version = "0.2.2" }
multi_log = "0.1.2"
log = "0.4.14"
syslog = "6.0.1"
hex = "0.4.3"
regex = "1.6.0"
bytes = "1.1.0"
jemallocator = { version = "0.5.0" }
async-trait = { version = "0.1.51" }
async-channel = "1.7.1"
nix = { version = "0.25.0", features = ["user", "fs"] }
atty = "0.2.14"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
triggered = "0.1.2"
once_cell = "1.9.0"
sqlx = { version = "0.5.11", features = [
  "runtime-tokio-native-tls", "any",
    "sqlite","mysql", "postgres" ] }
futures = "0.3.21"
ipnetwork = "0.20.0"
async-io = "1.7.0"
eva-robots = "0.2.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
openssl = "0.10.42"

[features]
std-alloc = []
openssl-vendored = ["openssl/vendored"]
