[package]
name = "eva-ics"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
name = "eva"
path = "src/lib.rs"

[[bin]]
name = "eva-node"
path = "src/main.rs"

[[bin]]
name = "init-registry"
path = "src/init_registry.rs"

[dependencies]
tokio = { features = ["full"] , workspace = true }
yedb = { version = "0.4.14", features = ["server-embed", "busrt-rpc"] }
clap = { features = ["derive"] , workspace = true }
busrt = { features = ["full"] , workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
colored = "2.1.0"
serde = { features = ["derive", "rc"] , workspace = true }
glob = "0.3.1"
hostname = "0.3.1"
lazy_static = { workspace = true }
chrono = { workspace = true }
eva-common = { features = ["full"] , workspace = true }
bmart = { workspace = true }
multi_log = "0.1.2"
log = { workspace = true }
syslog = "6.1.0"
hex = { workspace = true }
regex = "1.10.3"
bytes = "1.5.0"
jemallocator = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }
nix = { version = "0.25", features = ["user", "fs"] }
atty = "0.2.14"
uuid = { features = ["serde", "v4"] , workspace = true }
triggered = "0.1.2"
once_cell = { workspace = true }
sqlx = { features = [
"runtime-tokio-native-tls", "any",
"sqlite","mysql", "postgres" ] , workspace = true }
futures = { workspace = true }
ipnetwork = "0.20.0"
async-io = "2.3.1"
eva-robots = "0.3.0"
parking_lot = { features = ["serde"] , workspace = true }
openssl = { workspace = true }
sysinfo = "0.29"
num_cpus = "1.16.0"
binrw = "0.13.3"
mkmf = { path = "../mkmf" }

[features]
std-alloc = []
openssl-vendored = ["openssl/vendored", "eva-common/openssl-no-fips"]
openssl3 = ["eva-common/openssl3"]

[build-dependencies]
cargo_metadata = "0.18.1"
