[package]
name = "eva-ics"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
name = "eva"
path = "src/lib.rs"

[[bin]]
name = "eva-node"
path = "src/main.rs"

[[bin]]
name = "init-registry"
path = "src/init_registry.rs"

[[bin]]
name = "rt-launch"
path = "src/rt-launch.rs"

[dependencies]
tokio = { features = ["full"] , workspace = true }
yedb = { version = "0.5.1", features = ["server-embed", "busrt-rpc"] }
clap = { features = ["derive"] , workspace = true }
busrt = { features = ["full"] , workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
colored = "2.1.0"
serde = { features = ["derive", "rc"] , workspace = true }
glob = "0.3.1"
hostname = { workspace = true }
chrono = { workspace = true }
eva-common = { features = ["acl", "actions", "events", "time", "bus-rpc", "services", "registry", "workers",
  "dataconv", "db", "cache", "hyper-tools", "extended-value", "common-payloads", "payload",
  "logic", "logger", "axum", "serde-keyvalue", "console-logger", "data-objects"], workspace = true }
bmart = { workspace = true }
multi_log = "0.1.2"
log = { workspace = true }
syslog = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
mimalloc = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
async-channel = { workspace = true }
nix = { version = "0.25", features = ["user", "fs"] }
atty = "0.2.14"
uuid = { features = ["serde", "v4"] , workspace = true }
triggered = "0.1.2"
sqlx = { features = [ "runtime-tokio-native-tls", "any", "sqlite", "postgres" ] , workspace = true }
futures = { workspace = true }
ipnetwork = { workspace = true }
async-io = "2.3.1"
eva-robots = "0.4.0"
parking_lot = { features = ["serde"] , workspace = true }
sysinfo = { workspace = true }
num_cpus = { workspace = true }
binrw = { workspace = true }
submap = { workspace = true }
libc = { workspace = true }
rtsc = { workspace = true }
oneshot = { workspace = true }

[features]
std-alloc = []

[build-dependencies]
cargo_metadata = "0.18.1"
