[package]
name = "genpass-native"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10.60"
base64 = "0.13.0"
eva-common = "0.3.34"
nix = { version = "0.25.0", features = ["time"] }
hex = "0.4.3"
serde = { version = "1.0.143", features = ["derive"] }

[features]
openssl-vendored = ["openssl/vendored"]
