[package]
name = "genpass-native"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
version = "0.1.1"

[dependencies]
openssl = { workspace = true }
base64 = { workspace = true }
eva-common = { workspace = true }
nix = { version = "0.25", features = ["time"] }
hex = { workspace = true }
serde = { features = ["derive"] , workspace = true }
tokio = { features = ["time", "test-util", "rt", "macros"] , workspace = true }
once_cell = { workspace = true }

[features]
openssl-vendored = ["openssl/vendored"]
