[package]
name = "psrpc"
version = "0.1.1"
edition = "2021"

[lib]
name = "psrpc"
path = "src/lib.rs"

[dependencies]
psrt = "0.2"
paho-mqtt = "0.10.0"
async-trait = "0.1.53"
eva-common = { version = "0.3.36", features = ["workers", "payload"] }
async-channel = "1.7.1"
tokio = { version = "1.20.1", features = [] }
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
bzip2 = "0.4.4"
log = "0.4.16"
triggered = "0.1.2"
openssl = "0.10.60"
genpass-native = { path = "../genpass-native" }
parking_lot = "0.12.1"

[features]
openssl-vendored = ["openssl/vendored"]
