[package]
name = "psrpc"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
name = "psrpc"
path = "src/lib.rs"

[dependencies]
psrt = { workspace = true }
paho-mqtt = { workspace = true }
async-trait = { workspace = true }
eva-common = { features = ["workers", "payload"] , workspace = true }
async-channel = { workspace = true }
tokio = { features = [] , workspace = true }
serde = { features = ["derive"] , workspace = true }
uuid = { features = ["serde", "v4"] , workspace = true }
bzip2 = "0.4.4"
log = { workspace = true }
triggered = { workspace = true }
openssl = { workspace = true }
genpass-native = { workspace = true }
parking_lot = { workspace = true }

[features]
openssl-vendored = ["openssl/vendored", "paho-mqtt/vendored-ssl"]
