[package]
name = "bm-primary"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
sysinfo = { workspace = true }
busrt = { workspace = true, features = ["ipc", "rpc"] }
bma-benchmark = "0.0.20"
eva-common = { workspace = true, features = ["bus-rpc", "payload", "common-payloads", "console-logger"] }
env_logger = "0.11.1"
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bmart = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
