[package]
name = "eva-webinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.18"
busrt = "0.4.5"
eva-common = "0.2.18"
eva-sdk = "0.2.10"
log = "0.4.18"
once_cell = "1.17.2"
serde = { version = "1.0.163", features = ["derive"] }
tokio = "1.28.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
