[package]
name = "eva-webinfo"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/eva-ics/eva4"

[dependencies]
async-channel = "2.5"
async-trait = "0.1"
axum = "0.8"
busrt = { version = "0.5.4", features = ["rpc", "ipc", "rt"] }
eva-common = { version = "0.4.8", features = [
    "acl",
    "common-payloads",
    "events",
    "time",
] }
eva-sdk = { version = "0.4.3", features = ["http"] }
log = "0.4"
openssl = "0.10.79"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
