[package]
name = "eva-aaa-acl"
version = "4.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
busrt = { version = "0.4", features = ["rpc", "ipc"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
eva-common = { version = "0.3.28", features = ["events", "common-payloads"] }
log = "0.4.14"
async-channel = "1.7.1"
eva-sdk = { version = "0.3.21" }
jemallocator = { version = "0.5.0" }
once_cell = "1.9.0"
bmart = "0.1.14"

[features]
std-alloc = []
