[package]
name = "eva-aaa-acl"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { version = "0.4", features = ["rpc", "ipc"] }
tokio = { version = "1.36.0", features = ["full"] }
async-trait = { version = "0.1.77" }
serde = { version = "1.0.196", features = ["derive", "rc"] }
eva-common = { workspace = true, features = ["events", "common-payloads"] }
log = "0.4.20"
async-channel = "1.7"
eva-sdk = { workspace = true }
mimalloc = { workspace = true }
once_cell = "1.19.0"
bmart = "0.2.6"

[features]
std-alloc = []
