[package]
name = "eva-aaa-acl"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { workspace = true, features = ["rpc", "ipc"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
eva-common = { workspace = true, features = ["events", "common-payloads"] }
log = { workspace = true }
async-channel = { workspace = true }
eva-sdk = { workspace = true }
mimalloc = { workspace = true }
bmart = { workspace = true }

[features]
std-alloc = []
