[package]
name = "eva-aaa-localauth"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { version = "0.1.77" }
serde = { features = ["derive", "rc"] , workspace = true }
eva-common = { features = ["events", "common-payloads", "workers"] , workspace = true }
log = { workspace = true }
async-channel = "1.7"
eva-sdk = { version = "0.3.45" }
mimalloc = { workspace = true }
hex = "0.4.3"
once_cell = "1.19.0"
bmart = { workspace = true }
openssl = "0.10.72"
genpass-native = { path = "../../genpass-native" }

[features]
std-alloc = []
openssl-vendored = ["openssl/vendored"]
