[package]
name = "eva-aaa-localauth"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
eva-common = { features = ["events", "common-payloads", "workers"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
eva-sdk = { workspace = true }
mimalloc = { workspace = true }
hex = { workspace = true }
bmart = { workspace = true }
genpass-native = { path = "../../genpass-native" }

[features]
std-alloc = []
