[package]
name = "eva-aaa-otp"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
eva-common = { features = ["common-payloads", "openssl"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
eva-sdk = { workspace = true }
mimalloc = { workspace = true }
openssl = { workspace = true }
hex = { workspace = true }
bmart = { workspace = true }
libreauth = "0.18"
base32 = "0.4.0"

[features]
std-alloc = []
