[package]
name = "eva-bridge-ads"
version = "4.0.0"
edition = "2021"

[dependencies]
busrt = { version = "0.3", features = ["rpc", "ipc"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
log = "0.4.14"
lazy_static = "1.4.0"
async-channel = "1.7.1"
eva-sdk = { version = "0.1.104" }
eva-common = { version = "0.1.176", features = ["events", "time", "common-payloads"] }
once_cell = "1.9.0"
jemallocator = { version = "0.5.0" }
bmart = "0.1.15"
uuid = { version = "1.1.2", features = ["v4"] }
itertools = "0.10.3"
ads = "0.4.1"
wshack = { version = "0.1", path = "../../wshack" }
zerocopy = "0.6.1"

[features]
std-alloc = []
