[package]
name = "eva-controller-ads"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
async-channel = { workspace = true }
eva-sdk = { features = ["controller"] , workspace = true }
eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
once_cell = { workspace = true }
mimalloc = { workspace = true }
bmart = { workspace = true }
logreducer = { path = "../../logreducer" }
uuid = { version = "1.7.0", features = ["v4"] }
itertools = "0.12.1"
ads = "0.4.3"
zerocopy = "0.7.32"
utf16string = "0.2.0"

[features]
std-alloc = []
