[package]
name = "eva-controller-enip"
version = "4.0.1"
edition = "2021"

[dependencies]
busrt = { version = "0.3.5", features = ["rpc", "ipc"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
log = "0.4.14"
lazy_static = "1.4.0"
async-channel = "1.7.1"
eva-sdk = { version = "0.2.0", features = ["controller"] }
eva-common = { version = "0.2.1", features = ["events", "time", "common-payloads"] }
once_cell = "1.9.0"
jemallocator = { version = "0.5.0" }
plctag = { path = "./plctag" }
bmart = "0.1.15"
uuid = { version = "1.1.2", features = ["v4"] }
itertools = "0.10.3"

[features]
std-alloc = []
