[package]
name = "eva-controller-lm"
version = "4.0.2"
edition = "2021"

[dependencies]
busrt = { version = "0.4", features = ["rpc", "ipc"] }
eva-common = { version = "0.3.32", features = ["events", "time", "logic", "common-payloads"] }
eva-sdk = { version = "0.3.33", features = ["controller"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
log = "0.4.14"
lazy_static = "1.4.0"
async-channel = "1.7.1"
jemallocator = { version = "0.5.0" }
bmart = "0.2.2"
once_cell = "1.9.0"
chrono = "0.4.19"
cron = "0.11.0"
submap = { version = "0.2.3", features = ["native-digest"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
eva-robots = "0.3.0"

[features]
std-alloc = []
openssl-vendored = ["submap/openssl-vendored"]
