[package]
name = "eva-controller-modbus"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
eva-sdk = { features = ["controller"] , workspace = true }
busrt = { features = ["rpc", "ipc"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
eva-common = { features = ["events", "common-payloads"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
uuid = { features = ["serde", "v4"] , workspace = true }
mimalloc = { workspace = true }
itertools = { workspace = true }
logreducer = { path = "../../logreducer" }
bmart = { workspace = true }
rmodbus = { version = "0.6", features = [ "std" ] }
simple-pool = { workspace = true }
ieee754 = "0.2.6"
tokio-serial = "5.4.4"

[features]
std-alloc = []
