[package]
name = "eva-controller-opcua"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
log = { workspace = true }
logreducer = { path = "../../logreducer" }
async-channel = { workspace = true }
eva-sdk = { features = ["controller"] , workspace = true }
eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
mimalloc = { workspace = true }
bmart = { workspace = true }
uuid = { features = ["v4"] , workspace = true }
rplc_opcua = "0.12.3"

[features]
std-alloc = []
openssl-vendored = ["rplc_opcua/vendored-openssl"]
